testing/framework/resources/Advanced/Failing/mondrian/query5888.q
select time_by_day.the_year as c0, product_class_1.product_family as c1, sum(sales_fact_1997.unit_sales) as m0 from time_by_day as time_by_day, sales_fact_1997 as sales_fact_1997, product_class as product_class_1, store as store_1, product as product where sales_fact_1997.time_id = time_by_day.time_id and time_by_day.the_year = 1997 and sales_fact_1997.product_id = product.product_id and product.product_class_id = store_1.store_id and store_1.region_id = product_class_1.product_class_id and product_class_1.product_family = 'Drink' group by time_by_day.the_year, product_class_1.product_family;
